compiler/weave_syntax/tests/data/syntax/expressions/tuple0001.error
error: Expected '[token:identifier]'
        --> <source>:15:11
         |
      15 | 	return x.[1_2]
         |           ^
