compiler/weave_syntax/tests/data/syntax/expressions/tuple0001.source
var t0 = (2, 1, 3, 7);
var t1 = (a: 2, b: 1, c: 3, d: 7);

var t0_0 = t0.0;
var t0_1 = t0.1;
var t0_2 = t0.2;
var t0_3 = t0.3;

var t1_a = t1.a;
var t1_b = t1.b;
var t1_c = t1.c;
var t1_d = t1.d;

function foo(x: (Int, Int)) {
	return x.[1_2]
}
